src/test/ui/unsized-locals/fnbox-compat.stderr
error: implementation of `std::ops::FnOnce` is not general enough
  --> $DIR/fnbox-compat.rs:6:5
   |
LL |     f(&42)
   |     ^^^^^^
   |
   = note: `std::ops::FnOnce<(&'0 i32,)>` would have to be implemented for the type `std::boxed::Box<(dyn for<'r> std::boxed::FnBox<(&'r i32,), Output=T> + 'static)>`, for some specific lifetime `'0`
   = note: but `std::ops::FnOnce<(&'1 i32,)>` is actually implemented for the type `std::boxed::Box<(dyn std::boxed::FnBox<(&'1 i32,), Output=T> + '_)>`, for some specific lifetime `'1`

error: aborting due to previous error

